	- Changed neighbor UP/DOWN algorithm to require 10 failed TCP
	  connections for UP->DOWN transition.
	- Added 'unique_hostname' configuration option when its
	  necessary to have multiple machines with the same visible
	  hostname.
	- We can now cache HTTP replies with Set-Cookie.  These evil
	  headers are now filtered out for cache hits on the client
	  side.

Changes to squid-1.2.beta22 (June 1, 1998):

	- do not cut off "; parameter" from "digitized" Content-Type 
	  http fields
	- Added X-Request-URI for persistent connection debugging 
	  (Henrik Nordstrom)
	- Added Polish error pages from Maciej Kozinski.
	- Fixed hash_first/hash_next bugs with **Current pointer.
	  Replaced with *next pointer.
	- Fixed PUT/POST bugs in client (Henrik Nordstrom).
	- Deny forwarding loops in httpd accel mode (Henrik Nordstrom).
	- Fixed eventRun "spin" bug when event delta time == 0.
	- Fixed setting Last Modified time on cached entries when
	  receiving a 304 reply.
	- Added while loop in httpAccept().
	- Added while loop in icpHandleUdp().
	- Fixed some small memory leaks.
	- Fixed single-bit-int flag checks (Henrik Nordstrom).
	- Replaced "complex" (offset accounting) calls to snprintf with MemBuf
	- Do not send only-if-cached cc directive with requests 
          for peer's digests.
	- Added "automatic tuning" for incoming request rate, i.e.
	  how often to check HTTP and ICP sockets.  See comm.c
	  comments for details.

Changes to squid-1.2.beta21 (May 22, 1998):

	- Added Italian error pages by Alessio Bragadini.
	- Added Estonian error pages by Toomas Soome.
	- Added Russian (koi-r) error pages by Andrew L. Davydov.
	- Added Czech error pages by Jakub Nantl.
	- Fixed asnAclInitialize calling to prevent coredump.
	- Fixed FTP directory parsing again.
	- Made FTP directory listing "Generated" tagline like
	  the one for error pages.
	- Fixed an assertion coredump in statHistCopy from 
   	  reconfiguring with different #peers in squid.conf