@@ -20,6 +20,9 @@
 	- We can now cache HTTP replies with Set-Cookie.  These evil
 	  headers are now filtered out for cache hits on the client
 	  side.
+	- Fixed snmpwalk crash. snmpwalks do not crash squid anymore.
+	- Fixed snmp system Group; all objects are now returned.
+	- Fixed snmp system Group sysDescr and sysContact.
 
 Changes to squid-1.2.beta22 (June 1, 1998):
 
